--- a/03/index.css
+++ b/03/index.css
@@ -1,6 +1,7 @@
 :root{
   --img-blur: 0px;
   --img-spacing: 0px;
+  --img-padding: 100px;
   --border-color: black;
 }
 h3{
@@ -12,6 +13,7 @@ input{
 }
 img{
   filter: blur(var(--img-blur));
+  padding: calc(100px - var(--img-spacing) );
   border-style: solid;
   border-color: var(--border-color);
   border-width: var(--img-spacing);
